クオテーションによるエラーを修正

--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,13 +1,12 @@
 .page-title
-  h5
-    | 認証メールからパスワードを変更
+  h3 認証メールからパスワードを変更
 .form-items
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
     = render "devise/shared/error_messages", resource: resource
     .form-item
       = f.label :email
       .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email"'
+        = f.email_field :email, autofocus: true, autocomplete: "email"
     .actions
       = f.submit "認証メールを送信する", class: 'link-btn'
   = render "devise/shared/links"
