--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,5 +15,6 @@ html
         .alert.alert-success = flash.notice
       - if flash.alert.present?
         .alert.alert-warning = flash.alert
-    = yield
+    .main-items
+      = yield
     = render 'layouts/footer'
