--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,7 +1,10 @@
 .form-items{
-  margin: 0 30px;
 }
 
 .form-item{
-  margin: 10px 0;
+  margin-top: 25px;
+}
+
+.page-title{
+  margin-top: 20px;
 }
