--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -75,4 +75,12 @@ ul#error_explanation{
     font-size: 12px;
     margin: 0 auto;
   }
+
+  .error-container{
+    margin: 10px 0;
+    padding: 5px;
+    color: #B22222;
+    background-color: #FFF0F5;
+    border: 1px solid #FF1493;
+  }
 }
