--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,12 +1,12 @@
 .page-title
-  h3 認証メールからパスワードを変更
+  h3 認証メール送信
 .form-items
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
     = render "devise/shared/error_messages", resource: resource
     .form-item
       = f.label :email
       .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email"
-    .actions
-      = f.submit "認証メールを送信する", class: 'link-btn'
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+    .btn-position
+      = f.submit "送信する", class: 'btn form-btn send-mail-btn'
   = render "devise/shared/links"
