supplements#indexの幅やボタンデザインを修正

--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -29,22 +29,25 @@
   border-radius: 30px;
 }
 
+.supplement-btns{
+  display: flex;
+  margin-top: 10px;
+}
+
 .btn-edit{
+  color: #111;
+  flex-basis: 50%;
   font-size: 18px;
   height: 40px;
-  margin: 10px;
-  color: #111;
-  border: 1px solid #BBBBBB;
-  background-color: #FFFFFF;
+  border: 1px solid #AAA;
 }
 
 .btn-destroy{
+  color: #FF3300;
   font-size: 18px;
   height: 40px;
-  margin: 10px;
-  color: #FF3300;
-  border: 1px solid #BBBBBB;
-  background-color: #FFFFFF;
+  border: 1px solid #AAA;
+  margin-left: 20px;
 }
 
 .acd-check{
@@ -57,7 +60,7 @@
   color: black;
   display: block;
   margin-bottom: 1px;
-  padding: 5px;
+  padding: 5px 10px;
   position: relative;
 }
 
@@ -84,7 +87,6 @@
   border-top: 1px dashed #AAA;
   height: 0;
   opacity: 0;
-  padding: 0 10px;
   visibility: hidden;
 }
 
@@ -99,6 +101,3 @@
   visibility: visible;
 }
 
-.supplement-btns{
-  display: flex;
-}
