--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -13,21 +13,16 @@
 .form-btn{
   margin-top: 30px;
   border: 1px solid #BBB;
+  width: 150px;
 }
 
 .create-btn{
   color: #FFF;
   background-color: #1E90FF;
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 2px;
 }
 
 .update-btn{
   background-color: #FFD700;
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 2px;
 }
 
 .login-btn, .cansel-btn{
@@ -57,5 +52,20 @@
     margin-top: 30px;
     width: 60%;
     font-size: 16px;
+  }
+
+  .create-btn{
+    color: #FFF;
+    background-color: #1E90FF;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 2px;
+  }
+
+  .update-btn{
+    background-color: #FFD700;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 2px;
   }
 }
