--- a/app/views/supplements/edit.html.slim
+++ b/app/views/supplements/edit.html.slim
@@ -1,3 +1,4 @@
-.page-title
-  h4 サプリメント編集
-= render partial: 'form', locals: { supplement: @supplement }
+.main-items
+  .page-title
+    h4 サプリメント編集
+  = render partial: 'form', locals: { supplement: @supplement }
