--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,17 +1,18 @@
-.page-title
-  h3 パスワード変更
-.form-items
-  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-    = render "devise/shared/error_messages", resource: resource
-    = f.hidden_field :reset_password_token
-    .form-item
-      = f.label :password, '新しいパスワード(6文字以上)'
-      .form-password-input
-        = f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control'
-    .form-item
-      = f.label :password_confirmation, '新しいパスワード(確認用)'
-      .form-password-input
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
-    .btn-position
-      = f.submit '変更する', class: 'btn form-btn update-btn'
-= render "devise/shared/links"
+.main-items
+  .page-title
+    h3 パスワード変更
+  .form-items
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      = f.hidden_field :reset_password_token
+      .form-item
+        = f.label :password, '新しいパスワード(6文字以上)'
+        .form-password-input
+          = f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control'
+      .form-item
+        = f.label :password_confirmation, '新しいパスワード(確認用)'
+        .form-password-input
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+      .btn-position
+        = f.submit '変更する', class: 'btn form-btn update-btn'
+  = render "devise/shared/links"
