--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,33 +1,34 @@
-.page-title
-  h3 プロフィール編集
-.form-items
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-    = render "devise/shared/error_messages", resource: resource
-    .form-item
-      = f.label :email
-      .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-    .form-item
-      = f.label :password, '新しいパスワード(6文字以上)'
-      .form-password-input
-        = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-    .form-item
-      = f.label :password_confirmation, '新しいパスワード(確認用)'
-      .form-password-input
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
-    .form-item
-      = f.label :current_password, '現在のパスワード(変更を保存する場合)'
-      .form-password-input
-        = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
-    .btn-position
-      = f.submit '更新する', class: ' btn form-btn update-btn'
-    .btn-position
-      = link_to t('devise.shared.links.back'), :back, class: 'btn form-btn cansel-btn'
+.main-items
+  .page-title
+    h3 プロフィール編集
+  .form-items
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .form-item
+        = f.label :email
+        .form-email-input
+          = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
+      .form-item
+        = f.label :password, '新しいパスワード(6文字以上)'
+        .form-password-input
+          = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
+      .form-item
+        = f.label :password_confirmation, '新しいパスワード(確認用)'
+        .form-password-input
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
+      .form-item
+        = f.label :current_password, '現在のパスワード(変更を保存する場合)'
+        .form-password-input
+          = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
+      .btn-position
+        = f.submit '更新する', class: ' btn form-btn update-btn'
+      .btn-position
+        = link_to t('devise.shared.links.back'), :back, class: 'btn form-btn cansel-btn'
 
-.danger-items
-  .danger-title
-    strong アカウントの削除
-  .cancel-items
-    .cancel-desc
-      | アカウントを削除すると、登録データも全て削除されます。
-    = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn destroy-btn'
+  .danger-items
+    .danger-title
+      strong アカウントの削除
+    .cancel-items
+      .cancel-desc
+        | アカウントを削除すると、登録データも全て削除されます。
+      = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn destroy-btn'
