--- a/app/views/supplements/new.html.slim
+++ b/app/views/supplements/new.html.slim
@@ -1,3 +1,4 @@
-.page-title
-  h4 サプリメント追加
-= render partial: 'form', locals: { supplement: @supplement }
+.main-items
+  .page-title
+    h4 サプリメント追加
+  = render partial: 'form', locals: { supplement: @supplement }
