トップページを修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -18,6 +18,12 @@
       |  ・クリック(タップ)で詳細を表示!!
     .image-container
       = image_tag 'supplement_open_acd.png', :size =>'294x190', class: 'image'
+    .image-description
+      | ・サプリも簡単に登録可能!!
+    .image-container
+      = image_tag 'supplement_create.png', :size => '284x592', class: 'image'
+
+
 
   .btn-position
     .user-create-btn
