--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -1,7 +1,7 @@
 .supplements-list{
   width: 90%;
   margin: 20px auto;
-  border: 2px solid #888;
+  border: 1px solid #555;
 }
 
 .supplement-item{
@@ -12,19 +12,27 @@
   border-bottom: none;
 }
 
-.empty-list{
-  margin: 30px;
-  padding: 10px;
+.welcome-content{
+  margin: 50px 0;
+  background: #FFF;
+  padding: 20px 5px;
+  border: 1px solid #FFFF00;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.supplements-empty{
+  margin: 50px  30px;
+  padding: 30px;
   border: 2px dashed #9057FF;
   border-radius: 10px;
 }
 
-.btn-add {
+.btn-supplement-add {
   margin: 20px auto;
   text-align: center;
   width: 400px;
-  color: #111;
-  background-color: #fff;
+  background: #fff;
   border: 2px solid #555;
   border-radius: 30px;
 }
@@ -34,7 +42,7 @@
   margin-top: 10px;
 }
 
-.btn-edit{
+.btn-supplement-edit{
   color: #111;
   flex-basis: 200px;
   font-size: 18px;
@@ -42,7 +50,7 @@
   border: 1px solid #AAA;
 }
 
-.btn-destroy{
+.btn-supplement-destroy{
   color: #FF3300;
   font-size: 18px;
   height: 40px;
@@ -102,17 +110,25 @@
 }
 
 @media (max-width: 767.98px) {
-  .btn-add {
-    margin: 20px auto;
+  .welcome-content{
+    margin: 50px 0;
+    background: #FFF;
+    padding: 20px 5px;
+    border: 1px solid #FFFF00;
+    border-radius: 5px;
+    text-align: start;
+  }
+
+  .btn-supplement-add {
+    margin: 30px auto;
     text-align: center;
     width: 200px;
-    color: #111;
     background-color: #fff;
     border: 2px solid #555;
     border-radius: 30px;
   }
 
-  .btn-edit{
+  .btn-supplement-edit{
     color: #111;
     flex-basis: 50%;
     font-size: 18px;
