--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,8 +1,9 @@
 body{
   position: relative;
-  background: #F8F8FF;
-  height: 100%;
   min-height: 100vh;
+  padding-bottom: 60px;
+  box-sizing: border-box;
+  background: #F8F8FF;
 }
 
 header{
@@ -13,11 +14,8 @@ header{
 
 footer{
   position: absolute;
-  margin-top: 140px;
   bottom: 0;
-  background: #75A9FF;
   width: 100%;
-  height: 25px;
 }
 
 ul#error_explanation{
@@ -69,6 +67,33 @@ ul#error_explanation{
   color: #B22222;
   background-color: #FFF0F5;
   border: 1px solid #FF1493;
+}
+
+.footer-items{
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.footer-item{
+  margin: 0 10px;
+}
+
+.doc-headline{
+  margin-top: 10px
+}
+
+.doc-desc{
+  font-size: 12px;
+}
+
+.doc-list{
+  font-size: 12px;
+  padding:  10px 20px;
+}
+
+.back-link{
+  margin-top: 20px
 }
 
 @media (max-width: 767.98px) {
