--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,23 +44,21 @@
     text-align: center;
     margin-bottom: 30px;
     padding-bottom: 15px;
-    border-bottom: 1px dashed #AAA;
   }
 
-  .btn-user-create{
-    border: 2px solid;
-    background: #fff;
-    margin: 20px;
+  .example-items{
+    background: #FFF;
   }
 
   .image-description{
     text-align: center;
-    margin-top: 20px;
+    padding-top: 20px;
   }
 
   .image-container{
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
   }
 
   .image{
