--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,4 +17,4 @@ html
       - if flash.alert.present?
         .alert.alert-warning = flash.alert
     = yield
-//    = render 'layouts/footer'
+    = render 'layouts/footer'
