--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,10 +1,8 @@
-.form-items{
-}
-
-.form-item{
-  margin-top: 25px;
-}
-
 .page-title{
   margin-top: 20px;
+}
+
+.icon-position-center,
+.text-position-center{
+  text-align: center;
 }
