--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -28,7 +28,7 @@
   .danger-items
     .danger-title
       strong アカウントの削除
-    .cancel-items
-      .cancel-desc
+    .destroy-items
+      .destroy-desc
         | アカウントを削除すると、登録データも全て削除されます。
       = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn destroy-btn'
