トップページの説明をわかりやすくした修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,26 +7,31 @@
     .home-headline.text-position-center
       | Introduction
     .home-description
-      | サプリの内容量と1日あたりの摂取量を設定するだけで、毎日自動更新！
-      br
-      | 残りが一目瞭然！リマインドも設定可能！
+      .home-description-sentence
+        | サプリを毎日定量摂取している人向け!
+      .home-description-sentence
+        | サプリの「内容量」と「1日あたりの摂取量」を設定するだけで、残りを毎日自動更新!
+      .home-description-sentence
+        | 残りが一目瞭然！
+      .home-description-sentence
+        | リマインドも設定可能!
     .example-items
       .home-headline.text-position-center
         | example
       .image-description.text-position-center
-        | ・リスト表示で残りが一目瞭然!!
+        | ・リスト表示で残りが一目瞭然
       .image-container
         = image_tag 'supplements_list.png', :size =>'256x212', class: 'image'
       .icon-position-center
         i class="far fa-arrow-alt-circle-down fa-3x"
       .image-description.text-position-center
-        |  ・クリック(タップ)で詳細を表示!!
+        |  ・クリック(タップ)で詳細を表示
       .image-container
         = image_tag 'supplement_open_acd.png', :size =>'260x328', class: 'image'
       .icon-position-center
         i class="fas fa-capsules fa-3x"
       .image-description.text-position-center
-        | ・サプリも簡単に登録可能!!
+        | ・サプリも簡単に登録可能!
 
   .user-create-btn
     = link_to new_user_registration_path, class: 'btn'
