--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,15 +14,19 @@
 }
 
 .home-headline{
-  font-size: 22px;
+  font-size: 24px;
   font-family: serif;
 }
 
 .home-description{
-  font-size: 15px;
   margin: 20px 20px 30px;
   padding-bottom: 15px;
   text-align: center;
+}
+
+.home-description-sentence{
+  font-size:  18px;
+  margin-bottom: 10px;
 }
 
 .example-items{
@@ -66,7 +70,12 @@
   }
 
   .home-description{
-    text-align: start;
+    margin: 20px 10px 30px;
+  }
+
+  .home-description-sentence{
+    font-size:  16px;
+    margin-bottom: 15px;
   }
 
   .example-items{
