アイコンのmarginを設定した

--- a/app/views/supplements/index.html.slim
+++ b/app/views/supplements/index.html.slim
@@ -19,7 +19,7 @@
   - if @supplements.empty? && flash[:notice] != "アカウント登録が完了しました。"
 
     .supplements-empty
-      .icon-position-center
+      .icon-position-center.icon-margin-bottom
         i class="far fa-flushed fa-4x"
       .text-position-center
         | サプリメントはありません
