--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -22,13 +22,13 @@
         | ・リスト表示で残りが一目瞭然
       .image-container
         = image_tag 'supplements_list.png', :size =>'256x212', class: 'image'
-      .icon-position-center
+      .icon-position-center.icon-margin-bottom
         i class="far fa-arrow-alt-circle-down fa-3x"
       .image-description.text-position-center
         |  ・クリック(タップ)で詳細を表示
       .image-container
         = image_tag 'supplement_open_acd.png', :size =>'260x328', class: 'image'
-      .icon-position-center
+      .icon-position-center.icon-margin-bottom
         i class="fas fa-capsules fa-3x"
       .image-description.text-position-center
         | ・サプリも簡単に登録可能!
