リマインドメール内容を修正

--- a/app/views/remind_supplements_mailer/remind_supplement.text.slim
+++ b/app/views/remind_supplements_mailer/remind_supplement.text.slim
@@ -1,2 +1,11 @@
+|Remaining supplementsよりリマインドメール
+="\n"
+|以下のサプリメントのリマインド日になりました
+="\n"
+="\n"
+|・サプリ名 : 
 = @supplement.name
-|のなくなる#{@supplement.remind}になりました。
+="\n"
+="\n"
+|・リマインド内容 : 
+|なくなる#{@supplement.remind}になりました
