--- a/app/views/remind_supplements_mailer/remind_supplement.html.slim
+++ b/app/views/remind_supplements_mailer/remind_supplement.html.slim
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta content="text/html; charset=UTF-8" />
-</head>
-<body>
-  = @supplement.name
-  |のなくなる#{@supplement.remind}になりました。
-</body>
-</html>
+|Remaining supplementsよりリマインドメール
+br
+|以下のサプリメントのリマインド日になりました
+br
+br
+|・サプリ名 : 
+= @supplement.name
+br
+br
+|・リマインド内容 : 
+|なくなる#{@supplement.remind}になりました。
+
