トップページの説明を詳しく記載

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -8,11 +8,11 @@
       | Introduction
     .home-description
       .home-description-sentence
-        | サプリを毎日定量摂取している人向け!
+        | サプリを毎日定量摂取している人向けの残量とリマインドを管理するサービスです。
       .home-description-sentence
-        | サプリの「内容量」と「1日あたりの摂取量」を設定するだけで、残りを毎日自動更新!
+        | サプリの「内容量」と「1日あたりの摂取量」を設定するだけで、残量を毎日自動更新!
       .home-description-sentence
-        | 残りが一目瞭然！
+        | 残量となくなる日が一目瞭然！
       .home-description-sentence
         | リマインドも設定可能!
     .example-items
