タイポを修正

--- a/app/views/tos/index.html.slim
+++ b/app/views/tos/index.html.slim
@@ -2,7 +2,7 @@
   h4.page-title
     |利用規約
   .doc-desc
-    |この利用規約（以下，「本規約」といいます。）は，Remaining supplement（以下，「当サイト」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。
+    |この利用規約（以下，「本規約」といいます。）は，Remaining supplements（以下，「当サイト」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。
 
   .doc-headline
     |1. 本規約の適用
