--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,7 +7,7 @@ header
             | Remaining supplements
         - else
           = link_to home_path, class: 'app-name'
-            | Remaining supplement
+            | Remaining supplements
       .nav-items
         - if user_signed_in?
           = link_to  edit_user_registration_path, class: 'nav-item' do
